# SpecInferKit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
configs/: benchmark.yaml  default.yaml
docker/: Dockerfile  Dockerfile.cpu  docker-compose.yml
examples/: custom_model.py  online_training.py  quickstart.py
scripts/: run_benchmarks.sh  setup_env.sh
src/specinferkit/: __init__.py  __main__.py
src/specinferkit/algorithms/: __init__.py  base.py  eagle.py  medusa.py
src/specinferkit/cli/: __init__.py  main.py
src/specinferkit/data/: __init__.py  dataset.py  download.py  streaming.py
src/specinferkit/eval/: __init__.py  benchmarks.py  cli.py  metrics.py
src/specinferkit/models/: __init__.py  registry.py
src/specinferkit/quantization/: __init__.py  fp8.py
src/specinferkit/serving/: __init__.py  client.py  server.py
src/specinferkit/trainer/: __init__.py  base.py  cli.py  distributed.py  online.py
src/specinferkit/utils/: __init__.py  config.py  distributed.py  logging.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_data.py  test_eval.py  test_quantization.py  test_trainer.py
