[metadata]
name = specinferkit
version = 0.1.0
description = Production-grade speculative decoding toolkit for LLMs
author = Sameer Alam
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.3.0
    transformers>=4.40.0
    numpy>=1.24.0
    pyyaml>=6.0
    tqdm>=4.64.0

[options.extras_require]
dev =
    pytest>=7.4.0
    ruff>=0.1.0
    mypy>=1.7.0

[options.entry_points]
console_scripts =
    specinferkit = specinferkit.cli.main:main
